# kotlin-lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hello.kt  main.cpp  output.ll  program
benchmarks/: compat.kt  fib.kt  fib_c.c  inline.kt  inline_c.c  loop.kt  loop_c.c  mandelbrot.kt  mandelbrot_c.c  nested.kt  nested_c.c  prime.kt  prime_c.c  run_benchmarks.sh
docs/: architecture.md  benchmarks.md  development.md  ir.md
docs/lexer/: specification.md
docs/parser/: grammar.md
src/: compiler.cpp  compiler.hpp  main.cpp
src/codegen/: llvm_codegen.cpp  llvm_codegen.hpp
src/ir/: ir.cpp  ir.hpp  ir_builder.hpp  ir_generator.cpp  ir_generator.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/parser/: ast.hpp  parser.cpp  parser.hpp
src/runtime/: runtime.c
src/semantic/: semantic_analyzer.cpp  semantic_analyzer.hpp  symbol_table.hpp
tests/: test_main.cpp
tests/ir/: test_ir.cpp  test_ir_generator.cpp
tests/lexer/: test_lexer.cpp
tests/parser/: test_parser.cpp
tests/semantic/: test_semantic.cpp
